--- a/index.html
+++ b/index.html
@@ -1,193 +1,3 @@
 <!doctype html>
-<html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Feliz Navidad, Alexandre (móvil)</title>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --accent1: #ff6b00;
-      --accent2: #ffd600;
-      --bg1: linear-gradient(180deg,#ffe6e0 0%, #fce6ff 50%, #d7e8ff 100%);
-      --card: rgba(255,255,255,0.98);
-      --text: #081029;
-      --muted: #586074;
-      --maxw: 900px;
-      --gap: 14px;
-      --btn-h: 52px;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%; margin:0; font-family: "Rubik", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
-    body{
-      background: var(--bg1);
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      display:flex;
-      align-items:flex-start;
-      justify-content:center;
-      padding:18px 12px;
-      color:var(--text);
-    }
-
-    .container{
-      width:100%;
-      max-width:var(--maxw);
-      background: var(--card);
-      border-radius:14px;
-      box-shadow: 0 12px 30px rgba(2,6,23,0.12);
-      overflow:hidden;
-      padding:14px;
-    }
-
-    /* snow overlay subtle */
-    .snow{ position:fixed; inset:0; pointer-events:none; background-image: radial-gradient(circle, rgba(255,255,255,0.9) 1px, transparent 2px); background-size:8px 8px; opacity:0.6; z-index:0; }
-
-    .header{
-      display:flex;
-      gap:12px;
-      align-items:center;
-      padding:8px 4px;
-    }
-    .portrait{
-      width:96px;
-      height:96px;
-      border-radius:14px;
-      overflow:hidden;
-      border:4px solid rgba(255,255,255,0.9);
-      flex-shrink:0;
-      background:#eee;
-    }
-    .portrait img{ width:100%; height:100%; object-fit:cover; display:block; }
-
-    .title-wrap{ flex:1; }
-    .title{ margin:0; font-size:18px; font-weight:700; }
-    .subtitle{ margin:2px 0 0; font-size:13px; color:var(--muted); }
-
-    .message{
-      margin-top:12px;
-      background:transparent;
-      font-size:15px;
-      line-height:1.55;
-      color:var(--text);
-      white-space:pre-wrap;
-    }
-
-    .controls{
-      margin-top:16px;
-      display:flex;
-      flex-direction:column;
-      gap:10px;
-    }
-    .btn{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      gap:10px;
-      height:var(--btn-h);
-      border-radius:12px;
-      border:0;
-      font-weight:700;
-      font-size:15px;
-      color:white;
-      text-decoration:none;
-      cursor:pointer;
-      box-shadow: 0 8px 18px rgba(0,0,0,0.08);
-    }
-    .btn.copy{ background: linear-gradient(90deg,#00b09b,#96c93d); }
-    .btn.music{ background: linear-gradient(90deg,var(--accent1),var(--accent2)); }
-    .btn.share{ background: linear-gradient(90deg,#6a11cb,#2575fc); }
-    .btn.audio{ background: linear-gradient(90deg,#ff4da6,#ff8a4d); }
-
-    .footer{ margin-top:12px; font-size:13px; color:var(--muted); text-align:center; }
-
-    /* larger tap area for small screens */
-    @media (max-width:420px){
-      .portrait{ width:84px; height:84px; }
-      .title{ font-size:17px; }
-      .message{ font-size:15px; }
-      .btn{ height:56px; font-size:16px; border-radius:14px; }
-    }
-  </style>
-</head>
-<body>
-  <div class="snow" aria-hidden="true"></div>
-
-  <main class="container" role="main" aria-labelledby="alexTitle">
-    <header class="header">
-      <div class="portrait" aria-hidden="false">
-        <img src="Foto_Alex.jpg" alt="Foto de Alexandre">
-      </div>
-      <div class="title-wrap">
-        <h1 id="alexTitle" class="title">🎄 Feliz Navidad, Alexandre (Alex / Xandy)</h1>
-        <div class="subtitle">16 años • Juguetón y cariñoso</div>
-      </div>
-    </header>
-
-    <section class="message" id="msg">
-Querido Alexandre (Alex / Xandy),
-
-estas fiestas quiero decirte algo con todo mi cariño: eres un joven lleno de vida y de alegría. Tu forma de bromear, de jugar y de hacer reír a la gente es una luz que llena la casa. Esa chispa tuya es preciosa y nos alegra cada día.
-
-Al mismo tiempo, quiero pedirte que sigas aprendiendo a leer los momentos: a veces las personas no están con humor para seguir una broma, y otras veces necesitan silencio o apoyo. Saber cuándo bromear y cuándo contenerse no te quita alegría —te hace aún más respetuoso y querido.
-
-Eres una persona cuidadosa: te preocupas por los demás cuando los ves mal, y eso demuestra lo grande que tienes el corazón. A tus 16 años tienes por delante muchísimo por aprender y por construir. Haz lo que te guste, sí, pero empieza ahora a ponerle intención y disciplina a tus pasiones: eso hará que tus sueños se conviertan en realidad.
-
-Estoy orgulloso de ti, de tu sonrisa y de tu fuerza. Que esta Navidad te traiga risas, abrazos y la claridad para empezar a dar pasos hacia lo que quieres ser.
-
-Con todo mi amor,
-Papá / Mamá
-    </section>
-
-    <div class="controls" role="toolbar" aria-label="Acciones">
-      <button class="btn copy" id="copyBtn">📋 Copiar mensaje</button>
-      <a class="btn music" id="musicBtn" href="https://www.youtube.com/watch?v=kmL8VakXiqc&list=RDkmL8VakXiqc&start_radio=1" target="_blank" rel="noopener noreferrer">🎧 Escuchar su música</a>
-      <button class="btn share" id="shareBtn">🔗 Compartir página</button>
-    </div>
-
-  <script>
-    // Copy
-    document.getElementById('copyBtn').addEventListener('click', async () => {
-      const text = document.getElementById('msg').innerText.trim();
-      try {
-        await navigator.clipboard.writeText(text);
-        const b = document.getElementById('copyBtn');
-        const prev = b.textContent;
-        b.textContent = '✅ Copiado';
-        setTimeout(()=> b.textContent = prev, 1300);
-      } catch (e) {
-        alert('No se pudo copiar automáticamente. Selecciona y copia manualmente.');
-      }
-    });
-
-    // Share
-    document.getElementById('shareBtn').addEventListener('click', (e) => {
-      if (navigator.share) {
-        navigator.share({ title: document.title, text: 'Mensaje para Alex', url: location.href }).catch(()=>{});
-      } else {
-        navigator.clipboard.writeText(location.href).then(()=> alert('Enlace copiado. Pégalo para compartir.'));
-      }
-    });
-
-    // Audio toggle: best-effort play/pause
-    const audio = document.getElementById('christmasAudio');
-    const toggle = document.getElementById('toggleAudio');
-    let playing = false;
-    toggle.addEventListener('click', async () => {
-      try {
-        if (!playing) {
-          await audio.play();
-          playing = true;
-          toggle.textContent = '🔊 Pausar villancico';
-        } else {
-          audio.pause();
-          playing = false;
-          toggle.textContent = '🔊 Reproducir villancico';
-        }
-      } catch (e) {
-        alert('No se pudo reproducir audio. Comprueba el volumen o intenta en otro navegador.');
-      }
-    });
-  </script>
-</body>
-</html>
+<html lang="es"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Alex - Responsive</title>
+<style>body{margin:0;font-family:system-ui,Arial;background:linear-gradient(180deg,#f8fbff,#fff);min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px;color:#081018}.wrapper{width:100%;max-width:1100px;background:#fff;border-radius:14px;box-shadow:0 12px 40px rgba(0,0,0,0.08);overflow:hidden;display:flex;gap:0}.left{flex:0 0 380px;background:linear-gradient(180deg,#fff,#fff);padding:24px;display:flex;flex-direction:column;align-items:center;gap:14px}.right{flex:1;padding:24px}.portrait{width:320px;height:320px;border-radius:14px;overflow:hidden;border:8px solid rgba(255,255,255,0.9);box-shadow:0 10px 30px rgba(0,0,0,0.12)}.portrait img{width:100%;height:100%;object-fit:cover}h1{margin:0;font-size:26px}.message{font-size:17px;line-height:1.7;margin-top:10px}.controls{margin-top:16px;display:flex;gap:12px;flex-wrap:wrap}.btn{padding:12px 14px;border-radius:12px;background:#ff6b00;color:#fff;text-decoration:none;font-weight:700}@media(max-width:900px){.wrapper{flex-direction:column}.left{width:100%}.portrait{width:100%;height:260px;border-radius:12px}}</style></head><body><div class="wrapper"><div class="left"><div class="portrait"><img src="Foto_Alex.jpg" alt="Foto Alexandre"></div><div style="font-weight:700">Alexandre — Alex / Xandy</div><div style="color:#556876;font-size:14px">16 años • Juguetón</div></div><div class="right"><h1>🎄 ¡Feliz Navidad, Alexandre!</h1><div class="message">Querido Alexandre (Alex / Xandy),<br><br>estas fiestas quiero decirte algo con todo mi cariño: eres un joven lleno de vida y de alegría. Tu forma de bromear, de jugar y de hacer reír a la gente es una luz que llena la casa. Esa chispa tuya es preciosa y nos alegra cada día.<br><br>Al mismo tiempo, quiero pedirte que sigas aprendiendo a leer los momentos: a veces las personas no están con humor para seguir una broma, y otras veces necesitan silencio o apoyo. Saber cuándo bromear y cuándo contenerse no te quita alegría —te hace aún más respetuoso y querido.<br><br>Eres una persona cuidadosa: te preocupas por los demás cuando los ves mal, y eso demuestra lo grande que tienes el corazón. A tus 16 años tienes por delante muchísimo por aprender y por construir. Haz lo que te guste, sí, pero empieza ahora a ponerle intención y disciplina a tus pasiones: eso hará que tus sueños se conviertan en realidad.<br><br>Estoy orgulloso de ti, de tu sonrisa y de tu fuerza. Que esta Navidad te traiga risas, abrazos y la claridad para empezar a dar pasos hacia lo que quieres ser.<br><br>Con todo mi amor,<br>Papá / Mamá<br></div><div class="controls"><a class="btn" href="https://www.youtube.com/watch?v=kmL8VakXiqc&list=RDkmL8VakXiqc&start_radio=1" target="_blank">🎧 Escuchar música</a><a class="btn" href="#" onclick="navigator.clipboard.writeText(document.querySelector('.message').innerText).then(()=>alert('Copiado'))">📋 Copiar</a></div></div></div></body></html>
