--- a/index.html
+++ b/index.html
@@ -53,21 +53,24 @@
 <body>
   <div class="container">
     <div class="card" role="region" aria-label="Galeria Alex">
-      <div class="title">Alex — Galeria (versão móvel)</div>
+      <div class="title">Feliz Navidad Alex</div>
       <div class="text">
         <h2>🎄 Feliz Natal, Alex!</h2>
         <p>
-          Querido Alex — estas fotos mostram um pouco da tua alegria e das aventuras que partilhas com a família.
-          Continuas a ser muito carinhoso, extremamente brincalhão e sempre pronto para uma piada.
-          Isso faz parte de quem és — mas lembra-te também de saber escolher os momentos.
+          Querido Alexandre (Alex / Xandy),
+
+Estas fiestas quiero decirte algo con todo mi cariño: eres un joven lleno de vida y de alegría. Tu forma de bromear, de jugar y de hacer reír a la gente es una luz que llena la casa. Esa chispa tuya es preciosa y nos alegra cada día.
         </p>
         <p>
-          És um excelente rapaz, preocupas-te com os outros, sobretudo quando os vês em dificuldades.
-          Ainda tens muito para aprender, mas também muito para oferecer ao mundo.
+          Al mismo tiempo, quiero pedirte que sigas aprendiendo a leer los momentos: a veces las personas no están con humor para seguir una broma, y otras veces necesitan silencio o apoyo. Saber cuándo bromear y cuándo contenerse no te quita alegría —te hace aún más respetuoso y querido.
         </p>
         <p>
-          Que este Natal te traga tranquilidade, sonhos novos e força para começares, já hoje,
-          a dedicar-te ao que realmente gostas. ❤️
+         Eres una persona cuidadosa: te preocupas por los demás cuando los ves mal, y eso demuestra lo grande que tienes el corazón. A tus 16 años tienes por delante muchísimo por aprender y por construir. Haz lo que te guste, sí, pero empieza ahora a ponerle intención y disciplina a tus pasiones: eso hará que tus sueños se conviertan en realidad.
+
+Estoy orgulloso de ti, de tu sonrisa y de tu fuerza. Que esta Navidad te traiga risas, abrazos y la claridad para empezar a dar pasos hacia lo que quieres ser.
+
+Con todo mi amor,
+Papá / Mamá ❤️
         </p>
       </div>
 
