--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           Estas fiestas quiero decirte algo con todo mi cariño: eres un joven lleno de vida y de alegría. Tu forma de bromear, de jugar y de hacer reír a la gente es una luz que llena la casa. Esa chispa tuya es preciosa y nos alegra cada día.
         </p>
         <p>
-          Al mismo tiempo, quiero pedirte que sigas aprendiendo a leer los momentos: a veces las personas no están con humor para seguir una broma, y otras veces necesitan silencio o apoyo. Saber cuándo bromear y cuándo contenerse no te quita alegría —te hace aún más respetuoso y querido.
+          Al mismo tiempo, quiero pedirte que sigas aprendiendo a leer los momentos: a veces las personas no están con humor para seguir una broma, y otras veces necesitan silencio o apoyo. Saber cuándo bromear y cuándo contenerse no te quita alegría te hace aún más respetuoso y querido.
         </p>
         <p>
          Eres una persona cuidadosa: te preocupas por los demás cuando los ves mal, y eso demuestra lo grande que tienes el corazón. A tus 16 años tienes por delante muchísimo por aprender y por construir. Haz lo que te guste, sí, pero empieza ahora a ponerle intención y disciplina a tus pasiones: eso hará que tus sueños se conviertan en realidad. </p>
